--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 	<meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,AngularJS,Angular,Angular2,jQuery,CSS,HTML,RWD,Dashboard,Vue,Vue.js,React,React.js">
 	<link rel="shortcut icon" href="assets/img/favicon.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-	<title>Tenderscout</title>
+	<title>Orbidal Group</title>
 </head>
 
 <!-- BODY options, add following classes to body to change options
