--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,18 @@
 <!doctype html>
 <html>
+
 <head>
-  <base href="./">
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Clever - Bootstrap 4 Admin Template">
-	<meta name="author" content="Łukasz Holeczek">
-	<meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,AngularJS,Angular,Angular2,jQuery,CSS,HTML,RWD,Dashboard,Vue,Vue.js,React,React.js">
-	<link rel="shortcut icon" href="assets/img/favicon.png">
+    <base href="./">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Clever - Bootstrap 4 Admin Template">
+    <meta name="author" content="Łukasz Holeczek">
+    <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,AngularJS,Angular,Angular2,jQuery,CSS,HTML,RWD,Dashboard,Vue,Vue.js,React,React.js">
+    <link rel="shortcut icon" href="assets/img/favicon.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-	<title>Orbidal Group</title>
+    <!-- <link rel="stylesheet" href="node_modules/ng-drag-drop/style.css"> -->
+    <title>Orbidal Group</title>
 </head>
 
 <!-- BODY options, add following classes to body to change options
@@ -42,10 +44,12 @@
 -->
 
 <body class="app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden">
-  <!-- Enable bootstrap 4 theme -->
-  <script>window.__theme = 'bs4';</script>
+    <!-- Enable bootstrap 4 theme -->
+    <script>
+        window.__theme = 'bs4';
+    </script>
 
-  <!-- App Loading... -->
+    <!-- App Loading... -->
 </body>
 
 </html>
